--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         stage('Deploy Helm Chart') {
         
             steps {
-               sh 'export KUBECONFIG="/tmp/config"; helm install spring-gradle-helm'
+            kubernetesDeploy configs: 'deployment.yaml,service.yaml,ingress.yaml', dockerCredentials: [[credentialsId: 'dockerhub']], kubeConfig: [path: ''], kubeconfigId: 'kubeconfigfile', secretName: '', ssh: [sshCredentialsId: '*', sshServer: ''], textCredentials: [certificateAuthorityData: '', clientCertificateData: '', clientKeyData: '', serverUrl: 'https://']
             }
         }
         
