--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         stage('Deploy Helm Chart') {
         
             steps {
-            withCredentials([kubeconfigContent(credentialsId: 'kube-credentials', variable: 'KUBECONFIG_CONTENT')]) {
+            withCredentials([kubeconfigContent(credentialsId: 'kube', variable: 'KUBECONFIG_CONTENT')]) {
     sh label: '', script: 'kubectl cluster-info'
 }
            }
